// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatus renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status test"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r2:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r3:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r2:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r2:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r2:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders status toggle icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r6:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r7:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r6:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </div>
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r6:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r6:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders status toggle text 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r4:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r4:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              >
                test
              </div>
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r4:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r4:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r0:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r1:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r0:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r0:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r0:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
